--- a/css/estilos.css
+++ b/css/estilos.css
@@ -44,9 +44,23 @@ body header {
   margin: 0 8vh;
 }
 
-.texto {
-  padding: 20px;
-  text-align: center;
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 3vh;
+}
+
+.image-container {
+  margin-right: 20px;
+}
+
+.imagen2{
+  border:2px solid #000;
+}
+
+.text-container {
+  text-align: justify;
 }
 
 footer {
