--- a/css/estilos.css
+++ b/css/estilos.css
@@ -55,13 +55,16 @@ body header {
   margin-right: 20px;
 }
 
-.imagen2{
+.imagen{
   border:2px solid #000;
 }
 
 .text-container {
   text-align: justify;
+  font-size: large;
 }
+
+head body 
 
 footer {
   padding: 20px;
