--- a/css/estilos.css
+++ b/css/estilos.css
@@ -15,16 +15,17 @@ body header {
 }
 
 #h1 {
-  font-size: 7vh;
-  margin: 5vh 8vh 5vh 8vh;
+  font-size: 6.5vh;
+  margin: 3vh 8vh 4vh 8vh;
   font-weight: bold;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .logo {
   position: absolute;
   width: 12vh;
   height: 12vh;
-  margin: 0.6% 35%;
+  margin: 0.4% 35%;
   border: 2px solid #000;
   border-radius: 50%;
 }
@@ -37,11 +38,14 @@ body header {
 .estilo-nav {
   background-color: #a2ccc9;
   border:3px solid #000;
+  margin: 0 4rem 0 4rem;
 }
 
 .nav-link {
   color: #000;
   margin: 0 8vh;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bolder;
 }
 
 .container {
@@ -62,11 +66,30 @@ body header {
 .text-container {
   text-align: justify;
   font-size: large;
+  padding: 1rem 1rem 2rem 2rem;
+}
+
+.fotos-gente{
+  width: 4rem;
+  height: 4rem;
+  border:2px solid #000;
+  border-radius: 50%;
+}
+
+.gente{
+  background-color: darkturquoise;
+  display: flex;
+}
+
+.texto-gente{
+  background-color: bisque;
+  display: grid;
+  
 }
 
 head body 
 
 footer {
   padding: 20px;
-  text-align: center;
+  text-align: justify;
 }
