--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 * {
-  margin: 0vh;
-  padding: 0vh;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
@@ -52,44 +52,79 @@ body header {
   display: grid; 
   justify-content: center;
   align-items: center;
-  margin-top: 3vh;
-  grid-template-columns: 1fr 1fr; 
-  grid-gap: 20px; 
+  margin-top: 2rem;
+  grid-template-columns: repeat(2, 1fr); 
+  background-color: antiquewhite;
 }
 
-.image-container {
-  margin-right: 20px;
+/* por alguna razon este container tiene ese espacio en la izquierda, no encuentro solucion aun*/
+.imagen-container {
+  padding: 0;
+  margin: 0;
+  background-color: #000;
 }
 
 .imagen {
+  display: block;
+  max-width: 100%;
+  height: auto;
   border: 2px solid #000;
 }
 
 .text-container {
   text-align: justify;
-  font-size: large;
-  padding: 1rem 1rem 2rem 2rem;
+  font-size: medium;
+  padding: 5rem 6rem 2rem 1rem;
+  font-style: italic;
+  font-weight: bold;
+  margin: 1rem 1rem 1rem 1rem;
+}
+
+.texto{
+  text-align: start;
 }
 
 .fotos-gente {
-  width: 4rem;
-  height: 4rem;
+  width: 5rem;
+  height: 5rem;
   border: 2px solid #000;
   border-radius: 50%;
 }
 
 .gente {
-  background-color: darkturquoise;
   display: grid;
   grid-template-columns: 1fr 1fr;
-
+}
+.contenedor-gente{
+  display: grid;
+  grid-template-columns: repeat(2, 7rem);
+  grid-template-rows: repeat(2, 7rem);
+  gap: 15%;
+  padding: 3.8rem 5rem ;
 }
 
-.texto-gente {
-  background-color: bisque;
+.contenedor-texto-gente {
+  padding: 3rem 2rem 3rem 2rem;
+}
+
+.texto-gente{
+  width: 50%;
+  margin-left: 10rem;
 }
 
 footer {
   padding: 20px;
   text-align: justify;
+}
+
+.containerr-galeria{
+  display: grid;
+  justify-items: center;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: repeat(2, 1fr);
+  row-gap: 3rem;
+}
+
+h3{
+  font-size: small;
 }
